frontend | Integraçao com api de recaptcha Termino do fluxo de pedido Correçao do fluxo de login

--- a/ingresso-ng/src/app/components/banner/banner.component.html
+++ b/ingresso-ng/src/app/components/banner/banner.component.html
@@ -4,13 +4,22 @@
             <ol class="carousel-indicators">
                 <li data-target="#banner" data-slide-to="0" class="active"></li>
                 <li data-target="#banner" data-slide-to="1"></li>
+                <li data-target="#banner" data-slide-to="2"></li>
+                <li data-target="#banner" data-slide-to="3"></li>
+
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="assets/images/sonic-banner.jpg" class="d-block w-100" />
+                    <img src="http://image.tmdb.org/t/p/original//lG802rseTZcN9mtLsQPVfApEVzM.jpg" class="d-block w-100" />
                 </div>
-                <div class="carousel-item ">
-                    <!-- <img src="assets/images/sonic-banner.jpg" class="d-block w-100" /> -->
+                <div class="carousel-item">
+                    <img src="http://image.tmdb.org/t/p/original//zETkzgle7c6wAeW11snnVUBp67S.jpg" class="d-block w-100" />
+                </div>
+                <div class="carousel-item">
+                    <img src="http://image.tmdb.org/t/p/original//wu1uilmhM4TdluKi2ytfz8gidHf.jpg" class="d-block w-100" />
+                </div>
+                <div class="carousel-item">
+                    <img src="http://image.tmdb.org/t/p/original//uozb2VeD87YmhoUP1RrGWfzuCrr.jpg" class="d-block w-100" />
                 </div>
             </div>
             <a class="carousel-control-prev" href="#banner" role="button" data-slide="prev">
