--- a/ingresso-ng/src/app/components/navbar/navbar.component.html
+++ b/ingresso-ng/src/app/components/navbar/navbar.component.html
@@ -21,10 +21,13 @@
                 <a class="nav-link text-white" routerLink="/login"><img src="assets/icons/user-white.svg" width="30" height="26" class="pr-2" />Entrar</a>
             </li>
             <li class="nav-item active mx-3" *ngIf='isLogged'>
-                <a class="nav-link text-white" routerLink="/myAccount"><img src="assets/icons/user-white.svg" width="30" height="26" class="pr-2" />Minha conta</a>
+                <a class="nav-link text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="assets/icons/user-white.svg" width="30" height="26" class="pr-2" />Minha conta</a>
+            </li>
+            <li class="nav-item active mx-3" *ngIf="isLogged && usuario.admin">
+                <a class="nav-link text-white" routerLink="/list-movie" ><fa-icon [icon]="faLock" class="pr-2"></fa-icon>Administrador</a>
             </li>
             <li class="nav-item active mx-3" *ngIf="isLogged">
-                <a class="nav-link text-white" routerLink="/list-movie" *ngIf="usuario.admin"><fa-icon [icon]="faLock" class="pr-2"></fa-icon>Administrador</a>
+                <a class="nav-link text-white" (click)="logout()" style="cursor: pointer;"><fa-icon [icon]="faSignOutAlt" class="pr-2"></fa-icon>Sair</a>
             </li>
         </ul>
     </div>
