--- a/ingresso-ng/src/app/pages/buy-ticket/ticket-payment/ticket-payment.component.html
+++ b/ingresso-ng/src/app/pages/buy-ticket/ticket-payment/ticket-payment.component.html
@@ -28,7 +28,7 @@
                 <input type="text" class="form-control payment-input" placeholder="Número do cartão" appCreditCard maxlength="19" formControlName="number">
             </div>
             <div class="col-2 form-group">
-                <input type="text" class="form-control payment-input" placeholder="CVC" appOnlyNumber maxlength="3" formControlName="cvc">
+                <input type="text" class="form-control payment-input" placeholder="CVV" appOnlyNumber maxlength="3" formControlName="cvv">
             </div>
             <div class="col-1 mr-2">
                 <p class="text-white font-weight-bold">Parcelas: </p>
@@ -49,15 +49,15 @@
             <div class="col-2 form-group">
                 <select class="form-control payment-input" formControlName="month">
                     <option value="">Mês</option>
-                    <option value="1">01</option>
-                    <option value="2">02</option>
-                    <option value="3">03</option>
-                    <option value="4">04</option>
-                    <option value="5">05</option>
-                    <option value="6">06</option>
-                    <option value="7">07</option>
-                    <option value="8">08</option>
-                    <option value="9">09</option>
+                    <option value="01">01</option>
+                    <option value="02">02</option>
+                    <option value="03">03</option>
+                    <option value="04">04</option>
+                    <option value="05">05</option>
+                    <option value="06">06</option>
+                    <option value="07">07</option>
+                    <option value="08">08</option>
+                    <option value="09">09</option>
                     <option value="10">10</option>
                     <option value="11">11</option>
                     <option value="12">12</option>
@@ -104,7 +104,7 @@
                 <input type="text" class="form-control payment-input" placeholder="Número do cartão" appCreditCard maxlength="19" formControlName="number">
             </div>
             <div class="col-2 form-group">
-                <input type="text" class="form-control payment-input" placeholder="CVC" appOnlyNumber maxlength="3" formControlName="cvc">
+                <input type="text" class="form-control payment-input" placeholder="CVV" appOnlyNumber maxlength="3" formControlName="cvv">
             </div>
             <div class="w-100"></div>
             <div class="col-2">
