--- a/ingresso-ng/src/app/pages/login/login.component.html
+++ b/ingresso-ng/src/app/pages/login/login.component.html
@@ -2,7 +2,7 @@
     <section class="row text-align-center justify-content-center py-4">
         <div class="col-12 col-sm-12 col-md-3 order-2 order-md-1 px-2">
             <h4>Entrar com uma rede social</h4>
-            <a class="btn bg-primary text-left text-white font-weight-bold w-100 my-3">
+            <a class="btn bg-primary text-left text-white font-weight-bold w-100 my-3" (click)="loginWithGoogle()">
                 <img src="assets/icons/google-icon-white.svg" width="24"/>
                 Entrar com o Google
             </a>
